--- a/style.css
+++ b/style.css
@@ -5,13 +5,67 @@
 }
 
 body{
+    background-color: #eafbff;
+    background-image: linear-gradient(
+        to bottom,
+        #eafbff 0%,
+        #eafbff 50%,
+        #5290f9 50%,
+        #5290f9 100%
+    );
     font-family: 'Muli', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
     margin:0;
     
+}
+
+nav {
+    background-color: #fff;
+    padding: 10px;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5) ;
+    transition: width .6s linear;
+}
+
+nav.active {
+    width: 300px
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin:0;
+    width:0;
+    transition: width 0.6s linear
+
+}
+
+nav.active ul {
+    width: 100%;
+}
+
+nav ul li {
+    transform: rotateY(0deg);
+    opacity: 0;
+    transition: transform .6s linear, opacity .6s linear;
+}
+
+nav.active ul li {
+    opacity: 1;
+    transform: rotateY(360deg);
+}
+
+nav ul a {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+    margin: 10px;
 }
