--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ nav {
     border-radius: 3px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.5) ;
     transition: width .6s linear;
+    overflow-x: hidden ;
 }
 
 nav.active {
-    width: 300px
+    width: 350px
 }
 
 nav ul {
@@ -67,5 +68,41 @@ nav ul a {
     position: relative;
     color: #000;
     text-decoration: none;
-    margin: 10px;
+    margin: 0 10px;
+}
+
+.icon {
+    background-color: #fff;
+    border: 0;
+    cursor: pointer;
+    padding: 0;
+    position: relative;
+    height: 30px;
+    width: 30px;
+}
+
+.icon:focus{
+    outline: 0;
+}
+
+.icon .line {
+    background-color: #5290f9;
+    height: 2px;
+    width: 20px;
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    transition: transform .6s linear;
+}
+
+.icon .line2 {
+    top: auto;
+    bottom: 10px;
+}
+
+nav.active .icon .line1 {
+    transform: rotate(-765deg) translateY(5.5px);
+}
+nav.active .icon .line2 {
+    transform: rotate(765deg) translateY(-5.5px);
 }
